# RustEvolve

./: .gitignore  .replit  README.md
animal_simulation/: Cargo.toml
animal_simulation/src/: config.rs  lib.rs  parts.rs  simulation.rs  world.rs
animal_simulation/src/parts/: brain.rs  eye.rs
animal_simulation/src/world/: animal.rs  food.rs
genetic_algorithm/: Cargo.toml
genetic_algorithm/src/: individual.rs  lib.rs  population.rs  stats.rs
genetic_algorithm/src/population/: roulette_wheel.rs
gridworld/: Cargo.toml
gridworld/src/: consts.rs  grid.rs  grid_math.rs  lib.rs  world.rs
gridworld/src/consts/: brain_io.rs  energy.rs  senses.rs  world.rs
gridworld/src/grid/: creature.rs  hazard.rs  reward.rs  tile.rs
gridworld/src/grid_math/: angle_lu.rs  direction.rs  grid_pt.rs  has_pos.rs
gridworld_sim/: Cargo.toml
gridworld_sim/src/: config.rs  main.rs  simulation.rs  stats.rs
gridworld_sim/src/parts/: brain.rs  mod.rs
neural_network/: Cargo.toml
neural_network/src/: layer.rs  lib.rs  network.rs
sim_visualizer/: Cargo.toml
sim_visualizer/src/: main.rs
