[package]
name = "animal_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33.0", features = ["rand-no-std"] }
ndarray = "0.16.1"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }

neural_network = { path = "../neural_network" }
genetic_algorithm = { path = "../genetic_algorithm" }

[dev-dependencies]
approx = "0.5.1"
rand_chacha = "0.3"
test-case = "3.3.1"

[profile.release]
debug = true
