[package]
name = "sim_visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33.0", features = ["rand-no-std"] }
ndarray = "0.16.1"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
macroquad = "0.4.13"

animal_simulation = { path = "../animal_simulation" }

[dev-dependencies]
approx = "0.5.1"
rand_chacha = "0.3"
test-case = "3.3.1"

[profile.release]
debug = true